# pyfileindex

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.ci_support/: check.py  environment-old.yml  environment.yml  release.py
.github/workflows/: UpdateDependabotPR.yml  automerge.yml  black.yml  coverage.yml  dependabot.yml  deploy.yml  format_black.yml  main.yml  mypy.yml  pipeline.yml  pypicheck.yml  unittests.yml  unittests_old.yml
binder/: environment.yml  postBuild
fileindex/: __init__.py  _version.py  fileindex.py
notebooks/: demo.ipynb
pyfileindex/: __init__.py  _version.py  pyfileindex.py  version.py
src/pyfileindex/: _version.py  pyfileindex.py
tests/: test_fileindex.py  test_pyfileindex.py
tests/unit/: test_pyfileindex.py
