[build-system]
requires = [
    "hatchling==1.27.0",
    "hatch-vcs==0.5.0",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "scandir==1.10.0",
]
build-backend = "hatchling.build"

[project]
name = "pyfileindex"
description = "pyfileindex - pythonic file system index"
authors = [
    { name = "Jan Janssen", email = "janssen@mpie.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyiron"]
requires-python = ">=3.9, <3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy==2.3.2",
    "pandas==2.3.2",
    "scandir==1.10.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyiron/pyfileindex"
Documentation = "https://github.com/pyiron/pyfileindex"
Repository = "https://github.com/pyiron/pyfileindex"

[tool.ruff]
exclude = [".ci_support", "notebooks", "tests", "setup.py", "_version.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-comprehensions
    "C4",
    # eradicate
    "ERA",
    # pylint
    "PL",
]
ignore = [
    # ignore line-length violations
    "E501",
]

[tool.hatch.build]
include = [
    "pyfileindex"
]

[tool.hatch.build.hooks.vcs]
version-file = "pyfileindex/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "pyfileindex"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pyfileindex"
]

[tool.hatch.version]
source = "vcs"
path = "pyfileindex/_version.py"

[tool.coverage.run]
omit = ["pyfileindex/_version.py", "tests/*"]
command_line = "-m unittest discover tests"
